--- a/tourist-web/src/main/webapp/view/manage/common/orderDetails.html
+++ b/tourist-web/src/main/webapp/view/manage/common/orderDetails.html
@@ -49,6 +49,9 @@
                             <span>取消订单</span>
                         </button>
                     </div>
+                    <div class="text-right">
+                        <button onclick="history.go(-1)" class="btn btn-success" type="button">返回</button>
+                    </div>
 
                 </div>
             </div>
