--- a/tourist-web/src/main/webapp/view/manage/common/settlementDetailsList.html
+++ b/tourist-web/src/main/webapp/view/manage/common/settlementDetailsList.html
@@ -59,17 +59,22 @@
                         审核通过</button>
                     <!--<button class="btn btn-success">导出结算</button>-->
                 </div>
-
+                <div id="toolbar" class="btn-group">
+                    <select class="form-control">
+                        <option value="basic">导出本页</option>
+                        <option value="all">导出全部</option>
+                        <option value="selected">选择导出</option>
+                    </select>
+                </div>
                 <table id="goodsTable" data-toggle="table"
                        data-url="../../../mock/supplier/settlementDetailsList.json"
                        th:attr="data-url=@{/base/touristOrders}"
                        data-method="get" data-side-pagination="server" data-page-number="1" data-page-size="10"
                        data-escape="true" data-query-params="getParams" data-toolbar="#toolbar"
-                       data-pagination="true"
-                       data-show-export="true"
-                       data-click-to-select="true">
+                       data-pagination="true" data-show-export="true" data-click-to-select="true">
                     <thead>
                     <tr>
+                        <th data-field="state" data-checkbox="true"></th>
                         <th data-field="orderNo" data-align="center">订单号</th>
                         <th data-field="touristName" data-align="center">商品名称</th>
                         <th data-field="orderMoney" data-align="center" data-sortable="true">订单金额</th>
@@ -88,8 +93,10 @@
 </div>
 <script src="http://resali.huobanplus.com/cdn/jquery/3.1.1/jquery.min.js"></script>
 <script src="http://resali.huobanplus.com/cdn/bootstrap/3.3.7/bootstrap.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.11.0/bootstrap-table.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.11.0/locale/bootstrap-table-zh-CN.min.js"></script>
+<script src="../../../assets/libs/bootstrap-table/bootstrap-table.js"></script>
+<script src="../../../assets/libs/bootstrap-table/bootstrap-table-zh-CN.min.js"></script>
+<script src="../../../assets/libs/bootstrap-table/bootstrap-table-export.js"></script>
+<script src="../../../assets/libs/bootstrap-table/tableExport.js"></script>
 <script src="http://resali.huobanplus.com/cdn/layer/3.0.1/layer.js"></script>
 <script type="text/javascript" th:inline="javascript">
     /*<![CDATA[*/
