--- a/tourist-web/src/main/webapp/view/wap/index.html
+++ b/tourist-web/src/main/webapp/view/wap/index.html
@@ -59,7 +59,7 @@
                     <div class="weui_tabbar_icon"><img src="../../assets/img/cty.png" alt=""></div>
                     <p class="weui_tabbar_label">长途游</p>
                 </a>
-                <a href="javascript:layer.alert('正在建设');" class="weui_tabbar_item">
+                <a href="mddxl.html" th:href="@{/wap/mddxl(offset=0)}" class="weui_tabbar_item">
                     <div class="weui_tabbar_icon"><img src="../../assets/img/dty.png" alt=""></div>
                     <p class="weui_tabbar_label">短途游</p>
                 </a>
