bug修复,单元测试，订单列表2

--- a/tourist-web/src/main/webapp/view/manage/common/orderList.html
+++ b/tourist-web/src/main/webapp/view/manage/common/orderList.html
@@ -75,19 +75,19 @@
 
                                     <div class="form-group">
                                         <label class="control-label" for="orderDate">下单时间：</label>
-                                        <input size="50" class="form-control" type="text"
+                                        <input size="50" class="form-control Date" type="text"
                                                id="orderDate" name="orderDate" placeholder="下单时间"/>
                                     </div>
 
                                     <div class="form-group">
                                         <label class="control-label" for="payDate">支付时间：</label>
-                                        <input size="50" class="form-control" type="text"
+                                        <input size="50" class="form-control Date" type="text"
                                                id="payDate" name="payDate" placeholder="支付时间"/>
                                     </div>
 
                                     <div class="form-group">
                                         <label class="control-label" for="touristDate">出行时间：</label>
-                                        <input size="50" class="form-control" type="text"
+                                        <input size="50" class="form-control Date" type="text"
                                                id="touristDate" name="touristDate" placeholder="出行时间"/>
                                     </div>
                                     <div class="form-group">
