--- a/tourist-web/src/main/webapp/view/manage/platform/main.html
+++ b/tourist-web/src/main/webapp/view/manage/platform/main.html
@@ -164,7 +164,8 @@
                     </li>
                 </ul>
             </div>
-            <a href="login.html" class="roll-nav roll-right J_tabExit"><i class="fa fa fa-sign-out"></i>退出</a>
+            <a href="../login.html" th:href="@{/logout}" class="roll-nav roll-right J_tabExit"><i
+                    class="fa fa fa-sign-out"></i>退出</a>
         </div>
         <div class="row J_mainContent" id="content-main">
             <iframe class="J_iframe" name="iframe0" width="100%" height="100%"
