选择商城商品product关联线路

--- a/tourist-web/src/main/webapp/view/manage/platform/touristGood/touristGood.html
+++ b/tourist-web/src/main/webapp/view/manage/platform/touristGood/touristGood.html
@@ -234,11 +234,12 @@
                 </div>
 
                 <div style="text-align: center;">
-                    <button type="button" class="btn-lit modifyCheckState" name="btnSave" id="jq-cms-sh">审核通过</button>
+                    <!--<button type="button" class="btn-lit modifyCheckState" name="btnSave" id="jq-cms-sh">审核通过</button>-->
                 </div>
             </div>
         </form>
     </div>
+
 </div>
 <script src="../../../../assets/js/jquery.min.js"></script>
 <script src="../../../../assets/libs/bootstrap/bootstrap.min.js"></script>
