--- a/tourist-web/src/main/webapp/view/manage/platform/touristGood/touristGoodList.html
+++ b/tourist-web/src/main/webapp/view/manage/platform/touristGood/touristGoodList.html
@@ -152,7 +152,7 @@
                     <h4 class="modal-title" id="myModalLabel">链接地址</h4>
                 </div>
                 <div class="modal-body">
-                    <div class="form-group">
+                    <div class="form-group clearfix">
                         <label for="linkUrl" class="col-sm-2 control-label">链接</label>
                         <div class="col-sm-10">
                             <input type="url" name="linkUrl" id="linkUrl" class="form-control" placeholder="链接地址">
@@ -176,16 +176,46 @@
                     <h4 class="modal-title" id="productModalLabel">商城货品id关联</h4>
                 </div>
                 <div class="modal-body">
-                    <div class="form-group">
-                        <label for="linkUrl" class="col-sm-2 control-label">货品id</label>
+                    <div class="form-group clearfix">
+                        <label for="goods" class="col-sm-2 control-label">商城商品</label>
                         <div class="col-sm-10">
-                            <input type="number" name="mallProductId" id="mallProductId" class="form-control"
-                                   placeholder="货品id">
+                            <select name="goodsList" id="goods" size="5" class="form-control">
+                                <option th:each="goods:${goodsList}"
+                                        data-products='[{"id":1,"code":"1"},{"id":2,"code":"2"}]'
+                                        th:attr="data-products=''+${goods.productJson}" th:text="${goods.code}">
+                                    123
+                                </option>
+                                <option th:remove="all" data-products='[{"id":1,"code":"1"},{"id":2,"code":"2"}]'>
+                                    123123123
+                                </option>
+                                <option th:remove="all" data-products='[{"id":12,"code":"12"},{"id":2,"code":"2"}]'>
+                                    123123123
+                                </option>
+                                <option th:remove="all" data-products='[{"id":13,"code":"13"},{"id":2,"code":"2"}]'>
+                                    123123123
+                                </option>
+                                <option th:remove="all" data-products='[{"id":14,"code":"14"},{"id":2,"code":"2"}]'>
+                                    123123123
+                                </option>
+                                <option th:remove="all"
+                                        data-products='[{"id":15,"code":"15"},{"id":2,"code":"2"}]'>123123123
+                                </option>
+                                <option th:remove="all" data-products='[{"id":16,"code":"16"},{"id":2,"code":"2"}]'>
+                                    123123123
+                                </option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="form-group clearfix">
+                        <label for="mallProductId" class="col-sm-2 control-label">商城货品</label>
+                        <div class="col-sm-10">
+                            <select name="mallProductId" id="mallProductId" size="5" class="form-control">
+                            </select>
                         </div>
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button class="btn btn-primary btnSearch doUpdateMallGoodsID" data-dismiss="modal">关联</button>
+                    <button class="btn btn-primary btnSearch doUpdateMallGoodsID">关联</button>
                     <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
                 </div>
             </div>
@@ -203,8 +233,8 @@
                     <h4 class="modal-title" id="notAuditedModalLabel">不通过描述</h4>
                 </div>
                 <div class="modal-body">
-                    <div class="form-group">
-                        <label for="linkUrl" class="col-sm-2 control-label">描述</label>
+                    <div class="form-group clearfix">
+                        <label for="notAuditedDetail" class="col-sm-2 control-label">描述</label>
                         <div class="col-sm-10">
                             <input type="text" maxlength="200" name="notAuditedDetail" id="notAuditedDetail"
                                    class="form-control"
@@ -213,7 +243,7 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button class="btn btn-primary btnSearch notAudited" data-dismiss="modal">确定</button>
+                    <button class="btn btn-primary btnSearch " data-dismiss="modal">确定</button>
                     <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
                 </div>
             </div>
