--- a/tourist-web/src/main/webapp/view/wap/procurementPayPage.html
+++ b/tourist-web/src/main/webapp/view/wap/procurementPayPage.html
@@ -28,7 +28,7 @@
                     <div class="DDH">
                         订单编号：<span th:text="${order.orderNo}">201604943218493</span>
                         <span style="color:red;"
-                              th:if="${order.orderState==0}" th:text="'请与 '+${failureTime}+' 前支付，逾期自动取消'">
+                              th:if="${failureTime!=null}" th:text="'请与 '+${failureTime}+' 前支付，逾期自动取消'">
                             <br> 请与 2017-02-22 10:12:50 前支付，逾期自动取消
                         </span>
                         <p style="clear:both"></p>
