--- a/tourist-web/src/main/webapp/view/wap/newOrder.html
+++ b/tourist-web/src/main/webapp/view/wap/newOrder.html
@@ -12,6 +12,8 @@
     <!--/*@thymesVar id="list" type="java.util.ArrayList<com.huotu.tourist.entity.TouristOrder>"*/-->
     <div class="DDH">
         <span th:text="'订单编号：'+${order.orderNo}">订单编号：1</span>
+        <span style="color:#ff2222" th:if="${order.orderState.getCode()==0}"
+              th:text="'请尽快支付，'+${order.createTime.plusMinutes(20)}+'后自动取消'">最晚</span>
         <span class="orderState" style="float:right; color:red" th:text="${order.orderState.value}">代付款</span>
         <p style="clear:both"></p>
     </div>
