--- a/tourist-web/src/main/webapp/view/manage/supplier/goodsDetailsH+.html
+++ b/tourist-web/src/main/webapp/view/manage/supplier/goodsDetailsH+.html
@@ -45,7 +45,8 @@
             <div class="ibox">
                 <div class="ibox-title">
                     <h2>编辑商品</h2>
-                    <h3 th:if="${good.touristCheckState.getCode()==4}"
+                    <h3 style="color: #ff2222"
+                        th:if="${good.touristCheckState!=null && good.touristCheckState.getCode()==4}"
                         th:text="'该商品审核未通过，原因是：'+${good.notAuditedDetail}">编辑商品</h3>
                     <div class="text-right">
                         <button onclick="history.go(-1)" class="btn btn-success" type="button">返回</button>
@@ -82,7 +83,8 @@
 
                                             <div class="col-sm-10">
                                                 <div class="imgTempSingle">
-                                                    <div class="col-sm-2" style="width: 230px;margin-right: 20px">
+                                                    <div th:if="*{touristImgUri!=null}" class="col-sm-2"
+                                                         style="width: 230px;margin-right: 20px">
                                                         <img id="pictureUrl" style="width: 230px;height: 150px"
                                                              res:src="*{touristImgUri}"
                                                              src="http://placehold.it/300x200?text=封面&size=50"/>
